--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <br><br><br>
     <section class="dream-area">
         <div class="half-width">
-            <img src="F:/ProgrammingHero/web-portfolio/Images/profile1.png" alt="Profile Image">
+            <img src="./Images/profile1.png" alt="Profile Image">
         </div>
         <div class="half-width">
             <h2>Get Done Your Website</h2>  
