--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="link-button" href="https://www.linkedin.com/in/adnan-hassan-9a3127138/" target="_blank">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="F:/ProgrammingHero/web-portfolio/Images/profile1.png" alt="Profile Image">
+            <img src="./Images/profile1.png" alt="Profile Image">
         </div>
     </section>
     <br><br><br>
